--- a/product-validation-service/src/main/resources/application.yml
+++ b/product-validation-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
       orchestrator: orchestrator
       product-validation-success: product-validation-success
       product-validation-fail: product-validation-fail
-    costumer:
+    consumer:
       group-id: product-validation-group
       auto-offset-reset: latest
 
