--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -3,11 +3,11 @@ server:
 
 spring:
   kafka:
-    bootstrap-servers: ${KAFKA_BORKER:localhost:9092}
+    bootstrap-servers: ${KAFKA_BROKER:localhost:9092}
     topic:
       start-saga: start-saga
       notify-ending: notify-ending
-    costumer:
+    consumer:
       group-id: order-group
       auto-offset-reset: latest
 
