Termino de configuração dos tópicos de microsserviços

--- a/orchestrator-service/src/main/resources/application.yml
+++ b/orchestrator-service/src/main/resources/application.yml
@@ -3,8 +3,8 @@ server:
 
 spring:
   kafka:
-    bootstrap-servers: ${KAFKA_BORKER:localhost:9092}
-    costumer:
+    bootstrap-servers: ${KAFKA_BROKER:localhost:9092}
+    consumer:
       group-id: orchestrator-group
       auto-offset-reset: latest
 
